--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./font-awesome.min.css">
-  <title>React App</title>
+  <title>MORE than JUST media</title>
 </head>
 
 <body>
