meta: change texts, add og:links, images

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@
     -->
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./font-awesome.min.css">
-  <title>MORE than JUST media</title>
+    <title>MORE than JUST media</title>
+
+    <meta property="og:url" content="https://morejust.media">
+    <meta property="og:image" content="https://morejust.media/logo-1024.png">
+    <meta property="og:description" content="Less (text) is more (sense). Drop (filter) the rubbish (journalism, fake news, fact distortion).">
+
 </head>
 
 <body>
@@ -30,8 +35,8 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-  
- 
+
+
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
